RESOLVED FIXED312342
EventSource should be closed when window.stop() is called
https://bugs.webkit.org/show_bug.cgi?id=312342
Summary EventSource should be closed when window.stop() is called
Chris Dumez
Reported 2026-04-14 21:05:04 PDT
EventSource should be closed when window.stop() is called
Attachments
Chris Dumez
Comment 1 2026-04-14 21:07:13 PDT
EWS
Comment 2 2026-04-15 06:38:08 PDT
Committed 311281@main (198dfbabf0c0): <https://commits.webkit.org/311281@main> Reviewed commits have been landed. Closing PR #62789 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-15 06:39:16 PDT
Jeff Johnson
Comment 4 2026-04-15 07:31:16 PDT
Note You need to log in before you can comment on or make changes to this bug.