Source/WebCore/page/EventSource.cpp
@@ -41,6 +41,7 @@
 #include "EventNames.h"
 #include "ExceptionOr.h"
 #include "HTTPStatusCodes.h"
+#include "LocalDOMWindow.h"
 #include "MessageEvent.h"
 #include "ResourceError.h"
 #include "ResourceRequest.h"
@@ -277,7 +278,21 @@ void EventSource::didFail(std::optional<ScriptExecutionContextIdentifier>, const
 
     // This is the case where the load gets cancelled on navigating away. We only fire an error event and attempt to reconnect
     // if we end up getting resumed from back/forward cache.
+    // However, if window.stop() was called, we should properly close the connection since we are not navigating away.
     if (error.isCancellation() && !m_isDoingExplicitCancellation) {
+        bool isWindowStopping = [this] {
+            if (auto* document = dynamicDowncast<Document>(scriptExecutionContext())) {
+                if (auto* window = document->window())
+                    return window->isStopping();
+            }
+            return false;
+        }();
+        if (isWindowStopping) {
+            m_state = CLOSED;
+            m_requestInFlight = false;
+            dispatchErrorEvent();
+            return;
+        }
         m_shouldReconnectOnResume = true;
         m_requestInFlight = false;
         return;
